--- a/app/Resources/views/course/edit_course.html.twig
+++ b/app/Resources/views/course/edit_course.html.twig
@@ -135,9 +135,8 @@
                                 Publication
                             </dt>
                             <dd>
-                                {% if courseInfo.publicationDate is not empty and courseInfo.publisher is not empty %}
+                                {% if courseInfo.publicationDate is not empty  %}
                                     <span class="badge badge-pill badge-success">Publié</span>
-                                    {{ courseInfo.publicationDate|date }} par {{ courseInfo.publisher }}
                                 {% else %}
                                     <span class="badge badge-pill badge-danger">Non publié</span>
                                 {% endif %}
