--- a/app/Resources/views/course/edit_activities_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_activities_course_info_tab.html.twig
@@ -24,7 +24,13 @@
     ] %}
 
     {{ form_start(form) }}
-    <div class="row mt-3">
+
+    <h4>
+        Sections et activités
+    </h4>
+    {{ form_widget(form.sections) }}
+
+    <div class="row mt-3 mb-5">
         <div class="col">
             <button type="button" id="addSectionButton"
                     class="btn btn-primary btn-block btn-sm">
@@ -34,15 +40,13 @@
         </div>
     </div>
 
-    {{ form_widget(form.sections) }}
-
     <hr>
 
-    <div class="row">
+    <div class="row mt-5">
         <div class="col container-evaluations">
             <div class="row">
                 <div class="col">
-                    <strong>Evaluation Terminale</strong>
+                    <h4>Evaluation Terminale</h4>
                 </div>
             </div>
             <div class="row">
