--- a/app/Resources/views/course/edit_mcc_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_mcc_course_info_tab.html.twig
@@ -61,7 +61,7 @@
     <div class="row mb-2">
         <div class="col">
             <h5 class="mt-3">
-                Conseils pratiques
+                Recommandations
             </h5>
         </div>
     </div>
