--- a/app/Resources/views/course/edit_presentation_course_tab.html.twig
+++ b/app/Resources/views/course/edit_presentation_course_tab.html.twig
@@ -132,6 +132,7 @@
         <div class="col">
             <div class="row mb-3">
                 <div class="col">
+                    {{ form_errors(form.teachers) }}
                     <strong>Qui fait partie de l'équipe enseignante ?</strong>
                 </div>
             </div>
