Forms validations modifications

--- a/app/Resources/views/course/edit_activities_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_activities_course_info_tab.html.twig
@@ -28,6 +28,7 @@
     <h4>
         Sections et activités
     </h4>
+    {{ form_errors(form.sections) }}
     {{ form_widget(form.sections) }}
 
     <div class="row mt-3 mb-5">
