--- a/app/Resources/views/form/sections_field.html.twig
+++ b/app/Resources/views/form/sections_field.html.twig
@@ -44,6 +44,7 @@
                             <div class="row">
                                 <div class="col">
                                     <strong>Activité(s) associée(s) au contenu</strong>
+                                    {{ form_errors(section.activities) }}
                                 </div>
                             </div>
 
