Check Permission before access to the course

--- a/app/Resources/views/course/edit_course.html.twig
+++ b/app/Resources/views/course/edit_course.html.twig
@@ -153,6 +153,10 @@
                         }
                     });
                 });
+
+                $(document).on('click', '#studentViewButton', function(){
+                    location.href = "{{ path('view_student', {'id': courseInfo.id}) }}";
+                });
             });
 
         </script>
