--- a/app/Resources/views/course/edit_activities_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_activities_course_info_tab.html.twig
@@ -34,7 +34,7 @@
     <div class="row mt-3 mb-5">
         <div class="col">
             <button type="button" id="addSectionButton"
-                    class="btn btn-primary btn-block btn-sm">
+                    class="btn btn-primary btn-block shadow">
                 <i class="fas fa-plus-circle"></i>
                 Ajouter une section
             </button>
@@ -63,7 +63,7 @@
 
     <div class="row mt-3">
         <div class="col">
-            <button class="btn btn-outline-primary btn-block submit" type="submit">
+            <button class="btn btn-outline-primary btn-block shadow submit" type="submit">
                 <i class="fas fa-save"></i>
                 Enregistrer
             </button>
