--- a/app/Resources/views/course/edit_course_info_panel.html.twig
+++ b/app/Resources/views/course/edit_course_info_panel.html.twig
@@ -31,13 +31,17 @@
 </div>
 <div class="row mt-3">
     <div class="col">
-        <button class="btn btn-outline-primary btn-block" type="button" id="publishButton"
+        <button class="btn btn-outline-primary btn-block shadow" type="button" id="publishButton"
                 {% if not courseInfoHelper.canBePublished(courseInfo) %}
                     disabled
                 {% endif %}
         >
-            <i class="fas fa-file-upload"></i>
+            <i class="fas fa-eye"></i>
             Publier
+        </button>
+        <button class="btn btn-outline-primary btn-block shadow" type="button" id="studentViewButton">
+            <i class="fas fa-graduation-cap"></i>
+            Voir la version étudiante
         </button>
     </div>
 </div>
