--- a/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
@@ -49,7 +49,7 @@
     </div>
     <div class="row mt-3">
         <div class="col">
-            <button class="btn btn-outline-primary btn-block submit" type="submit">
+            <button class="btn btn-outline-primary btn-block shadow submit" type="submit">
                 <i class="fas fa-save"></i>
                 Enregistrer
             </button>
