--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -293,7 +293,7 @@
         <div class="row mx-3 mt-5 d-flex flex-row justify-content-around">
             <div class="col-md-6 pl-0" >
                 <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
-                    <h5 class="m-0">PREREQUIS</h5>
+                    <h5 class="m-0">PRÉREQUIS</h5>
                 </div>
                 <div class="row d-flex flex-row">
                     <div class="col-md-12 d-flex flex-row justify-content-center align-items-center text-white">
@@ -308,7 +308,7 @@
             </div>
             <div class="col-md-6 pr-0" >
                 <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
-                    <h5 class="m-0">REMEDIATION / AIDE A LA REUSSITE</h5>
+                    <h5 class="m-0">REMÉDIATION / AIDE À LA RÉUSSITE</h5>
                 </div>
                 <div class="col-md-12 d-flex flex-row justify-content-center align-items-center text-white">
                     <h5 class="m-2">Si je rencontre des difficultés, je peux&hellip;</h5>
@@ -449,7 +449,7 @@
         <div class="row mx-3 d-flex flex-row justify-content-around">
             <div class="col-md-6 pl-0" >
                 <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
-                    <h5 class="m-0">MODALITES DE CONTROLE DES CONNAISSANCES</h5>
+                    <h5 class="m-0">MODALITÉS DE CONTRÔLE DES CONNAISSANCES</h5>
                 </div>
                 <div class="row m-3 d-flex flex-row justify-content-around">
                     <div class="col-md-6 pl-0" >
@@ -498,7 +498,7 @@
             </div>
             <div class="col-md-6 pr-0" >
                 <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
-                    <h5 class="m-0">METHODES D'EVALUATION</h5>
+                    <h5 class="m-0">MÉTHODES D'ÉVALUATION</h5>
                 </div>
                 <div class="d-flex flex-column text-white">
                 {% for section in course.courseSections %}
@@ -564,7 +564,7 @@
         </div>
         <div class="row mx-3 d-flex flex-row">
             <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
-                <h5 class="m-0">MATERIEL OBLIGATOIRE</h5>
+                <h5 class="m-0">MATÉRIEL OBLIGATOIRE</h5>
             </div>
         </div>
         <div class="text-white">
@@ -592,7 +592,7 @@
 
         <div class="row mx-3 mt-5 d-flex flex-row">
             <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
-                <h5 class="m-0">RESSOURCES PEDAGOGIQUES</h5>
+                <h5 class="m-0">RESSOURCES PÉDAGOGIQUES</h5>
             </div>
         </div>
         <div class="row mx-3 d-flex flex-row text-white">
@@ -602,7 +602,7 @@
 
         <div class="row mx-3 mt-5 d-flex flex-row">
             <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
-                <h5 class="m-0">ELEMENTS BIBLIOGRAPHIQUES</h5>
+                <h5 class="m-0">ÉLÉMENTS BIBLIOGRAPHIQUES</h5>
             </div>
         </div>
         <div class="row mx-3 d-flex flex-row text-white">
