--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -80,14 +80,14 @@
                     <i class="fas fa-circle text-info rounded-circle border border-dark"></i>
                     <i class="mx-1 fas fa-circle text-info rounded-circle border border-dark"></i>
                     <i class="fas fa-circle text-light rounded-circle border border-dark"></i>
-                    <span class="px-3 text-white border-right border-dark">Niveau intermediare</span>
+                    <span class="px-3 text-white border-right border-dark">Niveau intermédiare</span>
                     {% elseif course.level == "advanced" %}
                     <i class="fas fa-circle text-info rounded-circle border border-dark"></i>
                     <i class="mx-1 fas fa-circle text-info rounded-circle border border-dark"></i>
                     <i class="fas fa-circle text-info rounded-circle border border-dark"></i>
-                    <span class="px-3 text-white border-right border-dark" >Niveau avancé</span>
+                    <span class="px-3 text-white border-right border-dark">Niveau avancé</span>
                     {% endif %}
-                    <span class="mx-3 text-white">Domaine disciplinaire : {{course.domain}}</span>
+                    <span class="mx-3 text-white">Domaine disciplinaire : {{course.domain}}</span>
                 </div>
             </div>
             <div class="col-md-6">
@@ -125,7 +125,7 @@
                     {{course.summary|raw}}
                 </p>
                 <p class="text-justify text-left text-white">
-                    Equipe enseignante:
+                    Équipe enseignante :
                     {% for teacher in course.courseTeachers %}
                         {% if loop.last %}
                             {% if teacher.manager == true %}
@@ -143,7 +143,7 @@
                     {% endfor %}
                 </p>
                 <p class="text-justify text-left text-white">
-                    Période : <span class="font-weight-bold"> {{course.period}} </span>
+                    Période : <span class="font-weight-bold"> {{course.period}} </span>
                 </p>
             </div>
             <div class="col-md-7">
@@ -171,7 +171,7 @@
                 {% if course.teachingMode == "class" %}
                     <img class="w-50 mx-3" src="{{ asset('images/in_class_white_256.png') }}">
                     <span class="font-weight-bold media-body d-flex flex-column justify-content-center align-items-start">
-                    <span>PRESENTIEL</span>
+                    <span>PRÉSENTIEL</span>
                     <span class="font-weight-normal d-flex flex-column justify-content-center align-items-start">
                 {% elseif course.teachingMode == "hybrid" %}
                     <img class="w-50 mr-3" src="{{ asset('images/hybrid_white_256.png') }}">
@@ -251,53 +251,41 @@
 
 
         <div id="Objectifs_cours" class="row mx-3 mt-5 d-flex flex-row">
-            <div class="col-md-6 p-0">
+
+            <div class="col-md-12 p-0">
                 <h4 class="text-justify text-left font-weight-bold text-white">
                     Objectifs du cours
                 </h4>
+                <hr class="border border-white bg-light" style="height: 5px;">
             </div>
-        </div>
-        <div class="progress mb-3" style="height: 5px;">
-            <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
 
-
-        <div class="row mx-3 d-flex flex-row">
-            <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
+            <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex justify-content-center align-items-center">
                 <h5 class="m-0">ACQUIS D'APPRENTISSAGE</h5>
             </div>
-        </div>
-        <div class="row d-flex flex-row">
-            <div class="col-md-12 d-flex flex-row justify-content-center align-items-center text-white">
-                <h5 class="m-2">A la fin de ce cours, je serai capable de...</h5>
+
+            <div class="col-md-12 d-flex justify-content-center align-items-center text-white">
+                <h5 class="m-2">A la fin de ce cours, je serai capable de…</h5>
             </div>
-        </div>
-        <div>
-            {% for row in course.courseAchievements|batch(2) %}
-                <div class="row mx-3 d-flex flex-row my-3">
-                    {% for achievement in row %}
-                    {% set oddOrEven =  cycle(['pl-0', 'pr-0'], loop.index0) %}
-                        <div class="col-md-6 {{oddOrEven}}" >
-                            <div class="col-md-12 border border-info bg-info text-light rounded-pill d-flex flex-row justify-content-between align-items-center">
-                                <img src="https://via.placeholder.com/25" class="img-fluid rounded-circle" alt="Responsive image">
-                                <span class="my-2">{{achievement.description}} </span>
-                                <div></div>
-                            </div>
-                        </div>
-                    {% endfor %}
+
+        {% for achievement in course.courseAchievements %}
+            {% set oddOrEven = cycle(['pl-0', 'pr-0'], loop.index0) %}
+            <div class="col-md-6 pt-3 {{oddOrEven}}">
+                <div class="p-2 border border-info bg-info text-light rounded-pill text-center">
+                    {{achievement.description}}
                 </div>
-            {% endfor %}
+            </div>
+        {% endfor %}
+
         </div>
 
-
-        <div class="row mx-3 mt-5 d-flex flex-row justify-content-around">
+        <div class="row mx-3 mt-5 d-flex flex-row">
             <div class="col-md-6 pl-0" >
                 <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
                     <h5 class="m-0">PRÉREQUIS</h5>
                 </div>
                 <div class="row d-flex flex-row">
                     <div class="col-md-12 d-flex flex-row justify-content-center align-items-center text-white">
-                        <h5 class="m-2">Avant de suivre ce cours, je dois...</h5>
+                        <h5 class="m-2">Avant de suivre ce cours, je dois…</h5>
                     </div>
                 </div>
                 {% for prerequisite in course.coursePrerequisites %}
@@ -327,22 +315,20 @@
         </div>
 
 
-
         <div id="Contenu_activites" class="row mx-3 mt-5 d-flex flex-row">
-            <div class="col-md-6 p-0">
+            <div class="col-md-12 p-0">
                 <h4 class="text-justify text-left font-weight-bold text-white">
                     Contenu et activités
                 </h4>
+                <hr class="border border-white bg-light" style="height: 5px;">
             </div>
         </div>
-        <div class="progress mb-3" style="height: 5px;">
-            <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
+
         <div class="row m-3 d-flex flex-row justify-content-around">
             <div class="col-md-12 p-0" >
                 {% for section in course.courseSections %}
                     <div class="col p-2 my-2 border border-dark bg-light">
-                    <h6>{{section.title|raw}} : {{section.description|raw}}</h6>
+                    <h6>{{section.title|raw}} : {{section.description|raw}}</h6>
                     {% set ActivityHandled = [] %}
                     {% for activity in section.courseSectionActivities %}
                     {% set break = false %}
@@ -411,7 +397,7 @@
                 {% endfor %}
 
                 <div class="col p-2 my-2 border border-dark bg-light">
-                    <h6>Contrôle Terminal : tout le programme</h6>
+                    <h6>Contrôle Terminal : tout le programme</h6>
                     <div class="row mx-1 p-3 d-flex flex-row justify-content-between align-items-center text-light bg-dark }}">
                         <div class="d-flex flex-column align-items-start">
                     {% for ct in course.courseEvaluationCts %}
@@ -422,7 +408,7 @@
                         </span>
                     {% endfor %}
                         </div>
-                        <div class = "d-flex flex-row align-items-center">
+                        <div class="d-flex flex-row align-items-center">
                             <span class="font-weight-bold mx-3">Sur le campus</span>
                             <i class="fas mx-3 fa-2x fa-map-marker-alt"></i>
                         </div>
@@ -435,16 +421,13 @@
 
 
         <div id="Modalites_evaluation" class="row mx-3 mt-5 d-flex flex-row">
-            <div class="col-md-6 p-0">
+            <div class="col-md-12 p-0">
                 <h4 class="text-justify text-left font-weight-bold text-white">
                     Modalités d'évaluation
                 </h4>
+                <hr class="border border-white bg-light" style="height: 5px;">
             </div>
         </div>
-        <div class="progress mb-3" style="height: 5px;">
-            <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
-
 
         <div class="row mx-3 d-flex flex-row justify-content-around">
             <div class="col-md-6 pl-0" >
@@ -553,15 +536,14 @@
 
 
         <div id="Materiel_ressources" class="row mx-3 mt-5 d-flex flex-row">
-            <div class="col-md-6 p-0">
+            <div class="col-md-12 p-0">
                 <h4 class="text-justify text-left font-weight-bold text-white">
                     Matériel et ressources
                 </h4>
+                <hr class="border border-white bg-light" style="height: 5px;">
             </div>
         </div>
-        <div class="progress mb-3" style="height: 5px;">
-            <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
+
         <div class="row mx-3 d-flex flex-row">
             <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
                 <h5 class="m-0">MATÉRIEL OBLIGATOIRE</h5>
@@ -611,16 +593,13 @@
 
 
         <div id="Informations_pratiques" class="row mx-3 mt-5 d-flex flex-row">
-            <div class="col-md-6 p-0">
+            <div class="col-md-12 p-0">
                 <h4 class="text-justify text-left font-weight-bold text-white">
                     Informations pratiques
                 </h4>
+                <hr class="border border-white bg-light" style="height: 5px;">
             </div>
         </div>
-        <div class="progress mb-3" style="height: 5px;">
-            <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
-
 
         <div class="row mx-3 d-flex flex-row">
             <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
@@ -643,32 +622,30 @@
 
 
         <div id="Reglementation" class="row mx-3 mt-5 d-flex flex-row">
-            <div class="col-md-6 p-0">
+            <div class="col-md-12 p-0">
                 <h4 class="text-justify text-left font-weight-bold text-white">
                     Réglementation
                 </h4>
+                <hr class="border border-white bg-light" style="height: 5px;">
             </div>
         </div>
-        <div class="progress mb-3" style="height: 5px;">
-            <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
+
         <div class="row d-flex flex-row">
             <div class="col-md-12 d-flex flex-row justify-content-center align-items-center text-white">
-                <h5 class="m-2">En m'inscrivant à l'université, je m'engage à respecter le règlement des études ci-après :</h5>
+                <h5 class="m-2">En m'inscrivant à l'université, je m'engage à respecter le règlement des études ci-après :</h5>
             </div>
         </div>
 
 
         <div id="Mot_fin" class="row mx-3 mt-5 d-flex flex-row">
-            <div class="col-md-6 p-0">
+            <div class="col-md-12 p-0">
                 <h4 class="text-justify text-left font-weight-bold text-white">
                     Mot de la fin
                 </h4>
+                <hr class="border border-white bg-light" style="height: 5px;">
             </div>
         </div>
-        <div class="progress mb-3" style="height: 5px;">
-            <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
+
         <div class="row mx-3 d-flex flex-row text-white">
             {{course.closingRemarks|raw}}
         </div>
